# ListCpp1

./: .gitignore  CMakeLists.txt  List.cpp  List.h  README.md  Task6.cpp  Task6.h  someStruct.h
Tests/: CMakeLists.txt  Tests.cpp  Tests.h
